[package]
name = "shplit"
version = "0.1.0"
edition = "2021"
description = "LiveSplit... but in your terminal!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = {version = "0.22.0", package = "ratatui"}
livesplit = {package = "livesplit-core", version = "0.13" }
crossterm = "0.27"
nfde = "0.0.8"
serde = "1.0.183"
serde_derive = "1.0.183"
directories = "5.0.1"
toml = "0.7.6"
